--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Informe peso e altura para calcular o IMC.</div>
-            <a href="">
+            <a href="Ex03/index.html">
             <button>Calculadora de IMC</button>
         </a>
           </div>
@@ -66,7 +66,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Operações de soma, subtração, multiplicação e divisão.</div>
-            <a href="">
+            <a href="Ex04/index.html">
             <button>Calculadora Básica</button>
         </a>
           </div>
@@ -80,7 +80,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Digite o ano de nascimento e veja a maioridade.</div>
-            <a href="">
+            <a href="Ex05/index.html">
             <button>Verificador de Idade</button>
         </a>
           </div>
