--- a/Ex03/index.html
+++ b/Ex03/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Calculadore de IMC/h1>
+        <h1>Calculadore de IMC </h1>
         <a href="../index.html">Voltar</a>
       </header>
       <section id="inicio">
