--- a/Ex06/index.html
+++ b/Ex06/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <header>
-        <h1>Calculadore de IMC </h1>
+        <h1>Gerador de Tabuada</h1>
         <a href="../index.html">Voltar</a>
       </header>
       <section id="inicio">
         <div id="fundo">
             
         <div class="inputs">
-            <input type="text" id="peso" placeholder="Digite o seu peso" />
-            <input type="text" id="altura" placeholder="Digite a sua altura " />
+            <input type="text" id="num" placeholder="Digite um número"/>
             
           </div>
           <br>
           <div class="botoes">
-            <button id="adc" type="submit">Calcular</button>
+            <button id="cal" type="submit">Calcular</button>
+
           </div>
           <p id="resultado"></p>
         </div>
