--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Digite um número e veja sua tabuada completa.</div>
-        <a href="">
+        <a href="Ex06/index.html">
             <button>Gerador de Tabuada</button>
         </a>
           </div>
@@ -108,7 +108,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Adicione e remova itens de uma lista dinâmica.</div>
-            <a href="">
+            <a href="Ex07/index.html">
             <button>Lista de Compras</button>
         </a>
           </div>
@@ -122,7 +122,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Digite um texto para verificar se é palíndromo.</div>
-            <a href="">
+            <a href="Ex08/index.html">
             <button>Verificador de Palíndromos</button>
         </a>
           </div>
@@ -136,7 +136,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Animação interativa de um semáforo.</div>
-            <a href="">
+            <a href="Ex09/index.html">
             <button>Simulador de Semáforo</button>
         </a>
           </div>
@@ -150,7 +150,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Converte Celsius em Fahrenheit e Kelvin.</div>
-            <a href="">
+            <a href="Ex10/index.html">
             <button>Conversor de Temperatura</button>
         </a>
           </div>
