--- a/Ex09/index.html
+++ b/Ex09/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Verificador de Palíndromo</h1>
+        <h1>Simulador de Semáforo</h1>
         <a href="../index.html">Voltar</a>
     </header>
     <section id="inicio">
