--- a/Ex03/index.html
+++ b/Ex03/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Calculadora de IMC</title>
 </head>
 <body>
     <header>
-        <h1>Calculadore de IMC </h1>
+        <h1>Calculadora de IMC </h1>
         <a href="../index.html">Voltar</a>
       </header>
       <section id="inicio">
