--- a/Ex10/index.html
+++ b/Ex10/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>Lista de Compras</title>
+    <title>Conversor de Temperatura</title>
 </head>
 <body>
     <header>
