--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Calcula notas para um valor informado.</div>
-            <a href="">
+            <a href="Ex11/index.html">
             <button>Simulador de Caixa Eletrônico</button>
         </a>
           </div>
@@ -178,7 +178,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Um cronômetro simples e funcional.</div>
-            <a href="">
+            <a href="Ex12/index.html">
             <button>Cronômetro</button>
         </a>
           </div>
@@ -192,7 +192,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Gera senhas aleatórias com o tamanho desejado.</div>
-            <a href="">
+            <a href="Ex13/index.html">
             <button>Gerador de Senhas</button>
         </a>
           </div>
@@ -206,7 +206,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Sorteia um número entre um mínimo e máximo.</div>
-            <a href="">
+            <a href="Ex14/index.html">
             <button>Simulador de Sorteio</button>
         </a>
           </div>
