--- a/Ex15/index.html
+++ b/Ex15/index.html
@@ -6,25 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>Simulador de Sorteio</title>
+    <title>Sistema de votação</title>
 </head>
 
 <body>
     <header>
-        <h1>Simulador de Sorteio</h1>
+        <h1>Sistema de votação</h1>
         <a href="../index.html">Voltar</a>
     </header>
     <section id="inicio">
         <div id="fundo">
-          
+            <h3>Vote em uma opção:</h3>
             <br>
             <form class="inputs">
-                <input type="text"  id="vmi" placeholder= "Digite um valor Mínimo">
-                   <input type="text"  id="vma" placeholder= "Digite um valor Máximo">
-               
+                <label><input type="radio" name="opcao" id="btn1" value="1"> Opção 1</label><br>
+                <label><input type="radio" name="opcao" id="btn2" value="2"> Opção 2</label><br>
+                <label><input type="radio" name="opcao" id="btn3" value="3"> Opção 3</label><br>
             </form>
             <div class="botoes">
-                <button id="btn" type="button">Sortear</button>
+                <button id="btn4" type="button">Votar</button>
             </div>
             <p id="resultado"></p>
         </div>
