--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Sistema simples de votação com resultados.</div>
-            <a href="">
+            <a href="Ex15/index.html">
             <button>Enquete com Votos</button>
         </a>
           </div>
@@ -234,7 +234,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Conta palavras e caracteres em um texto.</div>
-            <a href="">
+            <a href="Ex16/index.html">
             <button>Contador de Palavras e Letras</button>
         </a>
           </div>
@@ -248,7 +248,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Verifica se um número é primo ou não.</div>
-            <a href="">
+            <a href="Ex17/index.html">
             <button>Verificador de Números Primos</button>
         </a>
           </div>
@@ -262,7 +262,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Verifica nome, email e senha antes do cadastro.</div>
-            <a href="">
+            <a href="Ex18/index.html">
             <button>Cadastro com Validação</button>
         </a>
           </div>
@@ -276,7 +276,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Adivinhe o número que o sistema escolheu.</div>
-            <a href="">
+            <a href="Ex19/index.html">
             <button>Jogo de Adivinhação</button>
         </a>
           </div>
@@ -290,7 +290,7 @@
           </div>
           <div class="card-back">
             <div class="card-text">Informe notas para saber se está aprovado.</div>
-            <a href="">
+            <a href="Ex20/Index.html">
             <button>Simulador de Notas Escolares</button>
         </a>
           </div>
