--- a/Ex15/index.html
+++ b/Ex15/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +7,33 @@
     <script src="script.js" defer></script>
     <title>Sistema de votação</title>
 </head>
-
 <body>
     <header>
         <h1>Sistema de votação</h1>
         <a href="../index.html">Voltar</a>
     </header>
+
     <section id="inicio">
         <div id="fundo">
-            <h3>Vote em uma opção:</h3>
-            <br>
+            <h3>Vote em uma opção:</h3><br>
             <form class="inputs">
                 <label><input type="radio" name="opcao" id="btn1" value="1"> Opção 1</label><br>
                 <label><input type="radio" name="opcao" id="btn2" value="2"> Opção 2</label><br>
                 <label><input type="radio" name="opcao" id="btn3" value="3"> Opção 3</label><br>
             </form>
+
             <div class="botoes">
                 <button id="btn4" type="button">Votar</button>
             </div>
+
             <p id="resultado"></p>
+
+            <div class="porcentagens">
+                <p>Opção 1: <span id="pct1">0%</span></p>
+                <p>Opção 2: <span id="pct2">0%</span></p>
+                <p>Opção 3: <span id="pct3">0%</span></p>
+            </div>
         </div>
     </section>
 </body>
-
 </html>
