--- a/Ex19/index.html
+++ b/Ex19/index.html
@@ -19,7 +19,7 @@
           <h3>Advinhe um número entre 1 e 10:</h3> <p id="vida"> 3 chances</p>
             <br>
             <form class="inputs">
-                <input type="text"  id="num" placeholder= "Digite um número" min="1" max="10">
+                <input type="text"  id="num" placeholder= "Digite um número">
            
             </form>
             <div class="botoes">
