--- a/Ex20/Index.html
+++ b/Ex20/Index.html
@@ -18,9 +18,9 @@
         <div id="fundo">
             <br>
             <form class="inputs">
-                <input type="text"  id="nt1" placeholder= "Digite a primeira nota" min="1" max="10">
-                <input type="text"  id="nt2" placeholder= "Digite a segunda nota"min="1" max="10">
-                <input type="text"  id="nt3" placeholder= "Digite a terceira nota"min="1" max="10">
+                <input type="text"  id="nt1" placeholder= "Digite a primeira nota">
+                <input type="text"  id="nt2" placeholder= "Digite a segunda nota">
+                <input type="text"  id="nt3" placeholder= "Digite a terceira nota">
            
             </form>
             <div class="botoes">
