--- a/Ex09/index.html
+++ b/Ex09/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>Simulador de Semáforo</title>
 </head>
 <body>
     <header>
-        <h1>Verificador de Palíndromo</h1>
+        <h1>Simulador de Semáforo</h1>
         <a href="../index.html">Voltar</a>
     </header>
     <section id="inicio">
