--- a/Ex15/index.html
+++ b/Ex15/index.html
@@ -15,11 +15,12 @@
 
     <section id="inicio">
         <div id="fundo">
-            <h3>Vote em uma opção:</h3><br>
+            <h3>Vote em uma opção:</h3>
+
             <form class="inputs">
-                <label><input type="radio" name="opcao" id="btn1" value="1"> Opção 1</label><br>
-                <label><input type="radio" name="opcao" id="btn2" value="2"> Opção 2</label><br>
-                <label><input type="radio" name="opcao" id="btn3" value="3"> Opção 3</label><br>
+                <label><input type="radio" name="opcao" id="btn1" value="1"> Opção 1</label>
+                <label><input type="radio" name="opcao" id="btn2" value="2"> Opção 2</label>
+                <label><input type="radio" name="opcao" id="btn3" value="3"> Opção 3</label>
             </form>
 
             <div class="botoes">
